test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_abstract_array_declarator_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  (
  int
  [
  const int(3)
  ]
  (
  *
  )
  )
  const int(0)
  ;
  }
